HDFVIEW-272 fix attributes
Attribute tables switched from ascii display to real types.
Compound attributes display correctly except for 3d, paging does not
work yet. The databuffer selection process needs work.
Attribute object structure refactored to reuse dataset functionality.